--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,10 +1,11 @@
+<a routerLink="/form" style="color:black;margin-left: 47.5% ;">Sign up</a>
 <div *ngFor="let i of profiles">
   <div class="card">
     <img src="" alt="John" style="width:100%">
     <h1>{{i.name}}</h1>
     <p class="title">{{i.domain}}</p>
     <p>{{i.joining_date}}</p>
-    <div style="margin: 24px 0;">
+    <div style="margin: 24px 0;">  
       <a href="#"><i class="fa fa-dribbble"></i></a> 
       <a href="#"><i class="fa fa-twitter"></i></a>  
       <a href="#"><i class="fa fa-linkedin"></i></a>  
